--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,10 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Barlow&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Tam giác lượng Nhóm 16</title>
   </head>
   <body>
@@ -52,10 +56,10 @@
 
       function Triangle() {
         this.x = Math.floor(Math.random() * canvas.width);
-        this.y = -20;
+        this.y = 0;
         this.color = arrColor[Math.floor(Math.random() * arrColor.length-1)];
-        this.z = Math.floor(Math.random() * 10);
-        this.t = Math.floor(Math.random() * 10);
+        this.z = Math.floor(Math.random() * 15) - 5;
+        this.t = Math.floor(Math.random() * 15) - 5;
         this.velocity = {
           x: Math.random() * 6 - 2,
           y: Math.random() * 6
